// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record path should nest with nested records 1`] = `
[
  {
    "code": "invalid_type",
    "path": [
      "a",
      "b",
    ],
  },
]
`;

exports[`record should not parse arrays 1`] = `
[
  {
    "code": "invalid_type",
    "path": [],
  },
]
`;

exports[`record should not parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "path": [],
  },
]
`;

exports[`record should not parse null 1`] = `
[
  {
    "code": "invalid_type",
    "path": [],
  },
]
`;

exports[`record should not parse records with invalid keys 1`] = `
[
  {
    "code": "invalid_literal",
    "expected": "a",
    "path": [
      "b",
    ],
  },
]
`;

exports[`record should not parse records with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "path": [
      "b",
    ],
  },
]
`;
